// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"development" environment "baseAssetsOutputPath" option 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "targets": "current node",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment "noStyling" variation 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "targets": "current node",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "targets": "current node",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "baseAssetsOutputPath" option 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "targets": "current node",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "targets": "current node",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "targets": "current node",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
